# tauke

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
tauke/: _daemon.py  cli.py  skill_template.md
tauke/commands/: cancel.py  init.py  install_skill.py  log.py  pull.py  run.py  setup.py  status.py
tauke/commands/worker/: allow.py  set_cap.py  start.py  status.py  stop.py
tauke/lib/: claude_runner.py  config.py  coord_repo.py  git_helpers.py  logger.py  task.py  token_tracker.py  worker.py
